fix nix candy wallpaper

--- a/NixCandy/Cham.toml
+++ b/NixCandy/Cham.toml
@@ -2,4 +2,4 @@ name = 'NixCandy'
 description = 'Mix of NixCity with CottonCandy'
 
 config = 'config'
-wallpaper = 'wallpapers/casseteWacca.jpg'
+wallpaper = 'wallpapers/blue_pink_moon.jpg'
