Spilled coffee on my peaclock!

--- a/NixCoffee/config/peaclock/config
+++ b/NixCoffee/config/peaclock/config
@@ -133,7 +133,7 @@ set auto-ratio on
 
 # set the style of the text set by the command 'fill' used to draw active
 # blocks in the clock
-style active-fg #90e4f3
+style active-fg #f1ac9a
 
 # set the style of the text set by the command 'fill' used to draw inactive
 # blocks in the clock
@@ -141,7 +141,7 @@ style inactive-fg clear
 
 # set the style of the text set by the command 'fill-colon' used to draw colon
 # blocks in the clock
-style colon-fg #f9afe8
+style colon-fg #e87369
 
 # set the style of the background used to draw active blocks in the clock
 style active-bg reverse
@@ -153,7 +153,7 @@ style inactive-bg clear
 style colon-bg clear
 
 # set the style of the date
-style date #f9afe8
+style date #e87369
 
 # set the style of the background
 style background clear
