--- a/NixCity/Cham.toml
+++ b/NixCity/Cham.toml
@@ -3,5 +3,5 @@ description = 'Welcome to NixCity!'
 
 config = 'config'
 
-fixup_inline = ["kill eww", "eww open bar","makoctl reload"]
+fixup_inline = ["eww open bar --restart","makoctl reload"]
 wallpaper = 'wallpapers/cybercity_roads.jpg'
