--- a/NixCoffee/Cham.toml
+++ b/NixCoffee/Cham.toml
@@ -4,5 +4,5 @@ description = 'A coffee shop at NixCity'
 config = 'config'
 bin = 'bin'
 
-fixup_inline = ["kill eww", "eww open bar","makoctl reload"]
+fixup_inline = ["eww open bar --restart","makoctl reload"]
 wallpaper = 'wallpapers/coffee_pc_rain.gif'
