--- a/NixCoffee/config/hypr/hyprland.conf
+++ b/NixCoffee/config/hypr/hyprland.conf
@@ -1,9 +1,9 @@
-# Startup
-exec-once = swww init
-
-
 source = ~/.config/hypr/monitors.conf
 source = ~/.config/hypr/personal.conf
+
+# Wallpaper
+exec-once = swww init && sleep 5 && swww-daemon
+
 # Set programs that you use
 $terminal = kitty
 $fileManager = ranger
